feat: enforce cache bounds on data model types
